--- a/tzdata/PKGBUILD
+++ b/tzdata/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=tzdata
 pkgver=2021a
 _tzcode=2021a
 _tzdata=2021a
-pkgrel=1
+pkgrel=2
 pkgdesc="Sources for time zone and daylight saving time data"
 arch=(x86_64 powerpc64le powerpc)
 url="https://www.iana.org/time-zones"
@@ -42,7 +42,7 @@ package() {
   ./zic -b fat -d "${pkgdir}"/usr/share/zoneinfo/right -L leapseconds ${timezones[@]}
   # This creates the posixrules file. We use New York because POSIX requires the daylight savings time rules to be in accordance with US rules.   
   ./zic -b fat -d "${pkgdir}"/usr/share/zoneinfo -p America/New_York
-  install -m444 -t "${pkgdir}"/usr/share/zoneinfo iso3166.tab zone1970.tab zone.tab # zone.tab is depricated and will go soon
+  install -m444 -t "${pkgdir}"/usr/share/zoneinfo iso3166.tab leap-seconds.list zone1970.tab zone.tab # zone.tab is depricated and will go soon
   
   # cleanup
   rm "${pkgdir}/etc/localtime"
