--- a/linux/config
+++ b/linux/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/powerpc 5.13.1-arch1 Kernel Configuration
+# Linux/powerpc 5.14.3-arch1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (Arch POWER) 11.1.0"
 CONFIG_CC_IS_GCC=y
@@ -16,6 +16,7 @@ CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_CC_HAS_ASM_INLINE=y
+CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_TABLE_SORT=y
 CONFIG_THREAD_INFO_IN_TASK=y
@@ -57,6 +58,7 @@ CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_IRQ_SIM=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
+CONFIG_IRQ_DOMAIN_NOMAP=y
 CONFIG_GENERIC_MSI_IRQ=y
 CONFIG_GENERIC_MSI_IRQ_DOMAIN=y
 CONFIG_IRQ_FORCED_THREADING=y
@@ -99,6 +101,7 @@ CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
 # CONFIG_PREEMPT_NONE is not set
 CONFIG_PREEMPT_VOLUNTARY=y
 # CONFIG_PREEMPT is not set
+CONFIG_SCHED_CORE=y
 
 #
 # CPU/Task time and stats accounting
@@ -340,7 +343,6 @@ CONFIG_PPC_XIVE_SPAPR=y
 CONFIG_PPC_POWERNV=y
 CONFIG_OPAL_PRD=m
 CONFIG_PPC_MEMTRACE=y
-CONFIG_PPC_VAS=y
 CONFIG_SCOM_DEBUGFS=y
 CONFIG_PPC_PSERIES=y
 CONFIG_PARAVIRT_SPINLOCKS=y
@@ -356,6 +358,7 @@ CONFIG_HV_PERF_CTRS=y
 CONFIG_IBMVIO=y
 CONFIG_PAPR_SCM=m
 CONFIG_PPC_SVM=y
+CONFIG_PPC_VAS=y
 CONFIG_KVM_GUEST=y
 CONFIG_EPAPR_PARAVIRT=y
 CONFIG_PPC_NATIVE=y
@@ -561,6 +564,7 @@ CONFIG_HAVE_NMI=y
 CONFIG_HAVE_ARCH_TRACEHOOK=y
 CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_ARCH_HAS_FORTIFY_SOURCE=y
+CONFIG_ARCH_HAS_SET_MEMORY=y
 CONFIG_HAVE_ASM_MODVERSIONS=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_RSEQ=y
@@ -592,6 +596,8 @@ CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
+CONFIG_HAVE_MOVE_PUD=y
+CONFIG_HAVE_MOVE_PMD=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_HAVE_ARCH_HUGE_VMAP=y
 CONFIG_HAVE_ARCH_HUGE_VMALLOC=y
@@ -655,9 +661,11 @@ CONFIG_BLK_DEV_THROTTLING=y
 # CONFIG_BLK_DEV_THROTTLING_LOW is not set
 CONFIG_BLK_CMDLINE_PARSER=y
 CONFIG_BLK_WBT=y
-# CONFIG_BLK_CGROUP_IOLATENCY is not set
-# CONFIG_BLK_CGROUP_IOCOST is not set
 CONFIG_BLK_WBT_MQ=y
+# CONFIG_BLK_CGROUP_IOLATENCY is not set
+CONFIG_BLK_CGROUP_FC_APPID=y
+# CONFIG_BLK_CGROUP_IOCOST is not set
+CONFIG_BLK_CGROUP_IOPRIO=y
 CONFIG_BLK_DEBUG_FS=y
 CONFIG_BLK_DEBUG_FS_ZONED=y
 CONFIG_BLK_SED_OPAL=y
@@ -743,7 +751,6 @@ CONFIG_COREDUMP=y
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_SPARSEMEM_MANUAL=y
 CONFIG_SPARSEMEM=y
-CONFIG_NEED_MULTIPLE_NODES=y
 CONFIG_SPARSEMEM_EXTREME=y
 CONFIG_SPARSEMEM_VMEMMAP_ENABLE=y
 CONFIG_SPARSEMEM_VMEMMAP=y
@@ -759,6 +766,7 @@ CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE=y
 CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_SPLIT_PTLOCK_CPUS=4
+CONFIG_ARCH_ENABLE_SPLIT_PMD_PTLOCK=y
 CONFIG_MEMORY_BALLOON=y
 CONFIG_BALLOON_COMPACTION=y
 CONFIG_COMPACTION=y
@@ -955,6 +963,7 @@ CONFIG_NETFILTER_INGRESS=y
 CONFIG_NETFILTER_NETLINK=m
 CONFIG_NETFILTER_FAMILY_BRIDGE=y
 CONFIG_NETFILTER_FAMILY_ARP=y
+CONFIG_NETFILTER_NETLINK_HOOK=m
 CONFIG_NETFILTER_NETLINK_ACCT=m
 CONFIG_NETFILTER_NETLINK_QUEUE=m
 CONFIG_NETFILTER_NETLINK_LOG=m
@@ -1881,6 +1890,7 @@ CONFIG_PCI_SW_SWITCHTEC=m
 CONFIG_CXL_BUS=m
 CONFIG_CXL_MEM=m
 # CONFIG_CXL_MEM_RAW_COMMANDS is not set
+CONFIG_CXL_PMEM=m
 # CONFIG_PCCARD is not set
 CONFIG_RAPIDIO=m
 CONFIG_RAPIDIO_TSI721=m
@@ -1988,7 +1998,6 @@ CONFIG_MTD_BLOCK_RO=m
 # CONFIG_SSFDC is not set
 # CONFIG_SM_FTL is not set
 # CONFIG_MTD_OOPS is not set
-# CONFIG_MTD_PSTORE is not set
 CONFIG_MTD_SWAP=m
 # CONFIG_MTD_PARTITIONED_MASTER is not set
 
@@ -2028,6 +2037,7 @@ CONFIG_MTD_DATAFLASH=m
 # CONFIG_MTD_DATAFLASH_WRITE_VERIFY is not set
 CONFIG_MTD_DATAFLASH_OTP=y
 CONFIG_MTD_MCHP23K256=m
+CONFIG_MTD_MCHP48L640=m
 CONFIG_MTD_SST25L=m
 CONFIG_MTD_SLRAM=m
 CONFIG_MTD_PHRAM=m
@@ -2266,9 +2276,6 @@ CONFIG_PVPANIC_MMIO=m
 CONFIG_PVPANIC_PCI=m
 # end of Misc devices
 
-CONFIG_HAVE_IDE=y
-# CONFIG_IDE is not set
-
 #
 # SCSI device support
 #
@@ -2350,6 +2357,7 @@ CONFIG_SCSI_MPT3SAS=m
 CONFIG_SCSI_MPT2SAS_MAX_SGE=128
 CONFIG_SCSI_MPT3SAS_MAX_SGE=128
 CONFIG_SCSI_MPT2SAS=m
+CONFIG_SCSI_MPI3MR=m
 CONFIG_SCSI_SMARTPQI=m
 CONFIG_SCSI_UFSHCD=m
 CONFIG_SCSI_UFSHCD_PCI=m
@@ -2398,6 +2406,7 @@ CONFIG_QEDI=m
 CONFIG_QEDF=m
 CONFIG_SCSI_LPFC=m
 # CONFIG_SCSI_LPFC_DEBUG_FS is not set
+CONFIG_SCSI_EFCT=m
 CONFIG_SCSI_DC395x=m
 CONFIG_SCSI_AM53C974=m
 CONFIG_SCSI_WD719X=m
@@ -2859,6 +2868,7 @@ CONFIG_MLX5_EN_ARFS=y
 CONFIG_MLX5_EN_RXNFC=y
 CONFIG_MLX5_MPFS=y
 CONFIG_MLX5_ESWITCH=y
+CONFIG_MLX5_BRIDGE=y
 CONFIG_MLX5_CLS_ACT=y
 CONFIG_MLX5_TC_SAMPLE=y
 CONFIG_MLX5_CORE_EN_DCB=y
@@ -2872,8 +2882,6 @@ CONFIG_MLXSW_CORE_HWMON=y
 CONFIG_MLXSW_CORE_THERMAL=y
 CONFIG_MLXSW_PCI=m
 CONFIG_MLXSW_I2C=m
-CONFIG_MLXSW_SWITCHIB=m
-CONFIG_MLXSW_SWITCHX2=m
 CONFIG_MLXSW_SPECTRUM=m
 CONFIG_MLXSW_SPECTRUM_DCB=y
 CONFIG_MLXSW_MINIMAL=m
@@ -2979,6 +2987,7 @@ CONFIG_STMMAC_PLATFORM=m
 # CONFIG_DWMAC_DWC_QOS_ETH is not set
 CONFIG_DWMAC_GENERIC=m
 CONFIG_DWMAC_INTEL_PLAT=m
+CONFIG_DWMAC_LOONGSON=m
 CONFIG_STMMAC_PCI=m
 CONFIG_NET_VENDOR_SUN=y
 CONFIG_HAPPYMEAL=m
@@ -3039,10 +3048,12 @@ CONFIG_LSI_ET1011C_PHY=m
 CONFIG_MARVELL_PHY=m
 CONFIG_MARVELL_10G_PHY=m
 CONFIG_MARVELL_88X2222_PHY=m
+CONFIG_MEDIATEK_GE_PHY=m
 CONFIG_MICREL_PHY=m
 CONFIG_MICROCHIP_PHY=m
 CONFIG_MICROCHIP_T1_PHY=m
 CONFIG_MICROSEMI_PHY=m
+CONFIG_MOTORCOMM_PHY=m
 CONFIG_NATIONAL_PHY=m
 CONFIG_NXP_C45_TJA11XX_PHY=m
 # CONFIG_NXP_TJA11XX_PHY is not set
@@ -3064,6 +3075,7 @@ CONFIG_XILINX_GMII2RGMII=m
 CONFIG_MICREL_KS8995MA=m
 CONFIG_MDIO_DEVICE=y
 CONFIG_MDIO_BUS=y
+CONFIG_FWNODE_MDIO=y
 CONFIG_OF_MDIO=y
 CONFIG_MDIO_DEVRES=y
 CONFIG_MDIO_BITBANG=m
@@ -3469,9 +3481,16 @@ CONFIG_IEEE802154_CA8210=m
 # CONFIG_IEEE802154_CA8210_DEBUGFS is not set
 # CONFIG_IEEE802154_MCR20A is not set
 CONFIG_IEEE802154_HWSIM=m
+
+#
+# Wireless WAN
+#
 CONFIG_WWAN=y
-CONFIG_WWAN_CORE=m
+CONFIG_WWAN_HWSIM=m
 CONFIG_MHI_WWAN_CTRL=m
+CONFIG_RPMSG_WWAN_CTRL=m
+# end of Wireless WAN
+
 CONFIG_USB4_NET=m
 # CONFIG_NETDEVSIM is not set
 CONFIG_NET_FAILOVER=m
@@ -3598,6 +3617,7 @@ CONFIG_JOYSTICK_XPAD_LEDS=y
 CONFIG_JOYSTICK_WALKERA0701=m
 # CONFIG_JOYSTICK_PSXPAD_SPI is not set
 # CONFIG_JOYSTICK_PXRC is not set
+CONFIG_JOYSTICK_QWIIC=m
 CONFIG_JOYSTICK_FSIA6B=m
 CONFIG_INPUT_TABLET=y
 CONFIG_TABLET_USB_ACECAD=m
@@ -3938,8 +3958,6 @@ CONFIG_HW_RANDOM_XIPHERA=m
 CONFIG_APPLICOM=m
 CONFIG_DEVMEM=y
 CONFIG_NVRAM=y
-CONFIG_RAW_DRIVER=m
-CONFIG_MAX_RAW_DEVS=256
 CONFIG_DEVPORT=y
 CONFIG_HANGCHECK_TIMER=m
 CONFIG_TCG_TPM=m
@@ -3958,9 +3976,11 @@ CONFIG_TCG_VTPM_PROXY=m
 CONFIG_TCG_TIS_ST33ZP24=m
 CONFIG_TCG_TIS_ST33ZP24_I2C=m
 CONFIG_TCG_TIS_ST33ZP24_SPI=m
+CONFIG_XILLYBUS_CLASS=m
 CONFIG_XILLYBUS=m
 CONFIG_XILLYBUS_PCIE=m
 CONFIG_XILLYBUS_OF=m
+CONFIG_XILLYUSB=m
 # end of Character devices
 
 # CONFIG_RANDOM_TRUST_CPU is not set
@@ -4123,6 +4143,7 @@ CONFIG_SPI_SLAVE_TIME=m
 CONFIG_SPI_SLAVE_SYSTEM_CONTROL=m
 CONFIG_SPI_DYNAMIC=y
 CONFIG_SPMI=m
+CONFIG_SPMI_HISI3670=m
 CONFIG_HSI=m
 CONFIG_HSI_BOARDINFO=y
 
@@ -4532,6 +4553,7 @@ CONFIG_SENSORS_BEL_PFE=m
 CONFIG_SENSORS_BPA_RS600=m
 CONFIG_SENSORS_FSP_3Y=m
 CONFIG_SENSORS_IBM_CFFPS=m
+CONFIG_SENSORS_DPS920AB=m
 CONFIG_SENSORS_INSPUR_IPSPS=m
 # CONFIG_SENSORS_IR35221 is not set
 CONFIG_SENSORS_IR36021=m
@@ -4549,7 +4571,9 @@ CONFIG_SENSORS_MAX20751=m
 CONFIG_SENSORS_MAX31785=m
 CONFIG_SENSORS_MAX34440=m
 CONFIG_SENSORS_MAX8688=m
+CONFIG_SENSORS_MP2888=m
 CONFIG_SENSORS_MP2975=m
+CONFIG_SENSORS_PIM4328=m
 CONFIG_SENSORS_PM6764TR=m
 # CONFIG_SENSORS_PXE1610 is not set
 CONFIG_SENSORS_Q54SJ108A2=m
@@ -4565,6 +4589,7 @@ CONFIG_SENSORS_SBTSI=m
 CONFIG_SENSORS_SHT15=m
 CONFIG_SENSORS_SHT21=m
 CONFIG_SENSORS_SHT3x=m
+CONFIG_SENSORS_SHT4x=m
 CONFIG_SENSORS_SHTC1=m
 # CONFIG_SENSORS_SIS5595 is not set
 CONFIG_SENSORS_EMC1403=m
@@ -4633,6 +4658,7 @@ CONFIG_WATCHDOG_CORE=y
 CONFIG_WATCHDOG_HANDLE_BOOT_ENABLED=y
 CONFIG_WATCHDOG_OPEN_TIMEOUT=0
 CONFIG_WATCHDOG_SYSFS=y
+# CONFIG_WATCHDOG_HRTIMER_PRETIMEOUT is not set
 
 #
 # Watchdog Pretimeout Governors
@@ -4775,6 +4801,7 @@ CONFIG_PCF50633_ADC=m
 CONFIG_PCF50633_GPIO=m
 CONFIG_UCB1400_CORE=m
 CONFIG_MFD_RDC321X=m
+CONFIG_MFD_RT4831=m
 CONFIG_MFD_RT5033=m
 CONFIG_MFD_RC5T583=y
 CONFIG_MFD_RK808=m
@@ -4823,7 +4850,7 @@ CONFIG_MFD_TC3589X=y
 CONFIG_MFD_TQMX86=m
 CONFIG_MFD_VX855=m
 # CONFIG_MFD_LOCHNAGAR is not set
-CONFIG_MFD_ARIZONA=y
+CONFIG_MFD_ARIZONA=m
 CONFIG_MFD_ARIZONA_I2C=m
 CONFIG_MFD_ARIZONA_SPI=m
 CONFIG_MFD_CS47L24=y
@@ -4846,6 +4873,7 @@ CONFIG_MFD_STPMIC1=m
 CONFIG_MFD_STMFX=m
 CONFIG_MFD_ATC260X=m
 CONFIG_MFD_ATC260X_I2C=m
+CONFIG_MFD_QCOM_PM8008=m
 # CONFIG_RAVE_SP_CORE is not set
 # CONFIG_MFD_INTEL_M10_BMC is not set
 # end of Multifunction device drivers
@@ -4904,6 +4932,7 @@ CONFIG_REGULATOR_MAX77620=m
 CONFIG_REGULATOR_MAX77650=m
 CONFIG_REGULATOR_MAX8649=m
 CONFIG_REGULATOR_MAX8660=m
+CONFIG_REGULATOR_MAX8893=m
 CONFIG_REGULATOR_MAX8907=m
 CONFIG_REGULATOR_MAX8925=m
 CONFIG_REGULATOR_MAX8952=m
@@ -4926,6 +4955,7 @@ CONFIG_REGULATOR_MT6311=m
 CONFIG_REGULATOR_MT6315=m
 CONFIG_REGULATOR_MT6323=m
 CONFIG_REGULATOR_MT6358=m
+CONFIG_REGULATOR_MT6359=m
 CONFIG_REGULATOR_MT6360=m
 CONFIG_REGULATOR_MT6397=m
 CONFIG_REGULATOR_PALMAS=m
@@ -4945,7 +4975,10 @@ CONFIG_REGULATOR_RC5T583=m
 CONFIG_REGULATOR_RK808=m
 CONFIG_REGULATOR_RN5T618=m
 CONFIG_REGULATOR_RT4801=m
+CONFIG_REGULATOR_RT4831=m
 CONFIG_REGULATOR_RT5033=m
+CONFIG_REGULATOR_RT6160=m
+CONFIG_REGULATOR_RT6245=m
 CONFIG_REGULATOR_RTMV20=m
 CONFIG_REGULATOR_SKY81452=m
 # CONFIG_REGULATOR_SLG51000 is not set
@@ -5053,6 +5086,7 @@ CONFIG_VIDEO_TUNER=m
 CONFIG_V4L2_MEM2MEM_DEV=m
 CONFIG_V4L2_FLASH_LED_CLASS=m
 CONFIG_V4L2_FWNODE=m
+CONFIG_V4L2_ASYNC=m
 CONFIG_VIDEOBUF_GEN=m
 CONFIG_VIDEOBUF_DMA_SG=m
 CONFIG_VIDEOBUF_VMALLOC=m
@@ -5078,7 +5112,6 @@ CONFIG_DVB_DYNAMIC_MINORS=y
 #
 # Media drivers
 #
-CONFIG_TTPCI_EEPROM=m
 CONFIG_MEDIA_USB_SUPPORT=y
 
 #
@@ -5255,7 +5288,6 @@ CONFIG_VIDEO_TW686X=m
 # Media capture/analog TV support
 #
 CONFIG_VIDEO_IVTV=m
-# CONFIG_VIDEO_IVTV_DEPRECATED_IOCTLS is not set
 CONFIG_VIDEO_IVTV_ALSA=m
 CONFIG_VIDEO_FB_IVTV=m
 CONFIG_VIDEO_HEXIUM_GEMINI=m
@@ -5291,14 +5323,10 @@ CONFIG_VIDEO_SAA7164=m
 #
 # Media digital TV PCI Adapters
 #
-CONFIG_DVB_AV7110_IR=y
-CONFIG_DVB_AV7110=m
-CONFIG_DVB_AV7110_OSD=y
 CONFIG_DVB_BUDGET_CORE=m
 CONFIG_DVB_BUDGET=m
 CONFIG_DVB_BUDGET_CI=m
 CONFIG_DVB_BUDGET_AV=m
-CONFIG_DVB_BUDGET_PATCH=m
 CONFIG_DVB_B2C2_FLEXCOP_PCI=m
 # CONFIG_DVB_B2C2_FLEXCOP_PCI_DEBUG is not set
 CONFIG_DVB_PLUTO2=m
@@ -5343,6 +5371,7 @@ CONFIG_MEDIA_COMMON_OPTIONS=y
 #
 CONFIG_VIDEO_CX2341X=m
 CONFIG_VIDEO_TVEEPROM=m
+CONFIG_TTPCI_EEPROM=m
 CONFIG_CYPRESS_FIRMWARE=m
 CONFIG_VIDEOBUF2_CORE=m
 CONFIG_VIDEOBUF2_V4L2=m
@@ -5435,6 +5464,7 @@ CONFIG_VIDEO_M52790=m
 # Camera sensor devices
 #
 CONFIG_VIDEO_HI556=m
+CONFIG_VIDEO_IMX208=m
 # CONFIG_VIDEO_IMX214 is not set
 CONFIG_VIDEO_IMX219=m
 # CONFIG_VIDEO_IMX258 is not set
@@ -5622,7 +5652,6 @@ CONFIG_DVB_TDA10071=m
 #
 # DVB-T (terrestrial) frontends
 #
-CONFIG_DVB_SP8870=m
 CONFIG_DVB_SP887X=m
 CONFIG_DVB_CX22700=m
 CONFIG_DVB_CX22702=m
@@ -5739,7 +5768,6 @@ CONFIG_DRM_MIPI_DBI=m
 CONFIG_DRM_MIPI_DSI=y
 CONFIG_DRM_DP_AUX_CHARDEV=y
 CONFIG_DRM_KMS_HELPER=m
-CONFIG_DRM_KMS_FB_HELPER=y
 CONFIG_DRM_FBDEV_EMULATION=y
 CONFIG_DRM_FBDEV_OVERALLOC=100
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
@@ -5791,6 +5819,7 @@ CONFIG_DRM_AMD_SECURE_DISPLAY=y
 # end of Display Engine Configuration
 
 CONFIG_HSA_AMD=y
+CONFIG_HSA_AMD_SVM=y
 CONFIG_DRM_NOUVEAU=m
 CONFIG_NOUVEAU_LEGACY_CTX_SUPPORT=y
 CONFIG_NOUVEAU_DEBUG=5
@@ -5887,6 +5916,7 @@ CONFIG_DRM_DISPLAY_CONNECTOR=m
 CONFIG_DRM_LONTIUM_LT8912B=m
 CONFIG_DRM_LONTIUM_LT9611=m
 CONFIG_DRM_LONTIUM_LT9611UXC=m
+CONFIG_DRM_ITE_IT66121=m
 CONFIG_DRM_LVDS_CODEC=m
 CONFIG_DRM_MEGACHIPS_STDPXXXX_GE_B850V3_FW=m
 CONFIG_DRM_NWL_MIPI_DSI=m
@@ -5904,6 +5934,7 @@ CONFIG_DRM_TOSHIBA_TC358767=m
 CONFIG_DRM_TOSHIBA_TC358768=m
 CONFIG_DRM_TOSHIBA_TC358775=m
 CONFIG_DRM_TI_TFP410=m
+CONFIG_DRM_TI_SN65DSI83=m
 CONFIG_DRM_TI_SN65DSI86=m
 CONFIG_DRM_TI_TPD12S015=m
 CONFIG_DRM_ANALOGIX_ANX6345=m
@@ -5926,6 +5957,7 @@ CONFIG_DRM_ETNAVIV_THERMAL=y
 CONFIG_DRM_ARCPGU=m
 CONFIG_DRM_CIRRUS_QEMU=m
 CONFIG_DRM_GM12U320=m
+CONFIG_DRM_SIMPLEDRM=m
 CONFIG_TINYDRM_HX8357D=m
 # CONFIG_TINYDRM_ILI9225 is not set
 # CONFIG_TINYDRM_ILI9341 is not set
@@ -6033,6 +6065,7 @@ CONFIG_BACKLIGHT_PWM=m
 CONFIG_BACKLIGHT_DA9052=m
 # CONFIG_BACKLIGHT_MAX8925 is not set
 CONFIG_BACKLIGHT_QCOM_WLED=m
+CONFIG_BACKLIGHT_RT4831=m
 # CONFIG_BACKLIGHT_WM831X is not set
 # CONFIG_BACKLIGHT_ADP5520 is not set
 CONFIG_BACKLIGHT_ADP8860=m
@@ -6404,9 +6437,11 @@ CONFIG_SND_SOC_PCM512x=m
 CONFIG_SND_SOC_PCM512x_I2C=m
 CONFIG_SND_SOC_PCM512x_SPI=m
 CONFIG_SND_SOC_RK3328=m
+CONFIG_SND_SOC_RK817=m
 CONFIG_SND_SOC_RL6231=m
 CONFIG_SND_SOC_RT5616=m
 CONFIG_SND_SOC_RT5631=m
+CONFIG_SND_SOC_RT5640=m
 CONFIG_SND_SOC_RT5645=m
 CONFIG_SND_SOC_RT5659=m
 CONFIG_SND_SOC_SGTL5000=m
@@ -6418,6 +6453,7 @@ CONFIG_SND_SOC_SIGMADSP_REGMAP=m
 # CONFIG_SND_SOC_SIMPLE_MUX is not set
 CONFIG_SND_SOC_SPDIF=m
 CONFIG_SND_SOC_SSM2305=m
+CONFIG_SND_SOC_SSM2518=m
 CONFIG_SND_SOC_SSM2602=m
 CONFIG_SND_SOC_SSM2602_SPI=m
 CONFIG_SND_SOC_SSM2602_I2C=m
@@ -6435,6 +6471,7 @@ CONFIG_SND_SOC_TAS5720=m
 CONFIG_SND_SOC_TAS6424=m
 CONFIG_SND_SOC_TDA7419=m
 CONFIG_SND_SOC_TFA9879=m
+CONFIG_SND_SOC_TFA989X=m
 CONFIG_SND_SOC_TLV320AIC23=m
 CONFIG_SND_SOC_TLV320AIC23_I2C=m
 CONFIG_SND_SOC_TLV320AIC23_SPI=m
@@ -6475,7 +6512,6 @@ CONFIG_SND_SOC_WM8974=m
 CONFIG_SND_SOC_WM8978=m
 CONFIG_SND_SOC_WM8985=m
 CONFIG_SND_SOC_ZL38060=m
-CONFIG_SND_SOC_ZX_AUD96P22=m
 CONFIG_SND_SOC_MAX9759=m
 CONFIG_SND_SOC_MT6351=m
 CONFIG_SND_SOC_MT6358=m
@@ -7235,7 +7271,7 @@ CONFIG_INFINIBAND_MTHCA=m
 CONFIG_INFINIBAND_MTHCA_DEBUG=y
 CONFIG_INFINIBAND_CXGB4=m
 CONFIG_INFINIBAND_EFA=m
-CONFIG_INFINIBAND_I40IW=m
+CONFIG_INFINIBAND_IRDMA=m
 CONFIG_MLX4_INFINIBAND=m
 CONFIG_MLX5_INFINIBAND=m
 CONFIG_INFINIBAND_OCRDMA=m
@@ -7494,7 +7530,6 @@ CONFIG_VFIO_PCI=m
 CONFIG_VFIO_PCI_MMAP=y
 CONFIG_VFIO_PCI_INTX=y
 CONFIG_VFIO_MDEV=m
-CONFIG_VFIO_MDEV_DEVICE=m
 CONFIG_IRQ_BYPASS_MANAGER=y
 CONFIG_VIRT_DRIVERS=y
 CONFIG_VIRTIO=m
@@ -7693,6 +7728,11 @@ CONFIG_AD2S1210=m
 CONFIG_FB_SM750=m
 CONFIG_STAGING_MEDIA=y
 # CONFIG_VIDEO_ZORAN is not set
+CONFIG_DVB_AV7110_IR=y
+CONFIG_DVB_AV7110=m
+CONFIG_DVB_AV7110_OSD=y
+CONFIG_DVB_BUDGET_PATCH=m
+CONFIG_DVB_SP8870=m
 
 #
 # Android
@@ -7763,17 +7803,23 @@ CONFIG_GREYBUS_USB=m
 CONFIG_PI433=m
 CONFIG_XIL_AXIS_FIFO=m
 # CONFIG_FIELDBUS_DEV is not set
-# CONFIG_KPC2000 is not set
 CONFIG_QLGE=m
 CONFIG_WFX=m
-CONFIG_SPMI_HISI3670=m
 CONFIG_MFD_HI6421_SPMI=m
 # CONFIG_GOLDFISH is not set
 CONFIG_HAVE_CLK=y
-CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
 CONFIG_COMMON_CLK_WM831X=m
+
+#
+# Clock driver for ARM Reference designs
+#
+# CONFIG_ICST is not set
+# CONFIG_CLK_SP810 is not set
+# end of Clock driver for ARM Reference designs
+
+CONFIG_LMK04832=m
 CONFIG_COMMON_CLK_MAX77686=m
 CONFIG_COMMON_CLK_MAX9485=m
 CONFIG_COMMON_CLK_RK808=m
@@ -7956,6 +8002,9 @@ CONFIG_DA311=m
 CONFIG_DMARD06=m
 CONFIG_DMARD09=m
 CONFIG_DMARD10=m
+CONFIG_FXLS8962AF=m
+CONFIG_FXLS8962AF_I2C=m
+CONFIG_FXLS8962AF_SPI=m
 CONFIG_HID_SENSOR_ACCEL_3D=m
 CONFIG_IIO_ST_ACCEL_3AXIS=m
 CONFIG_IIO_ST_ACCEL_I2C_3AXIS=m
@@ -7976,6 +8025,7 @@ CONFIG_MMA9553=m
 CONFIG_MXC4005=m
 CONFIG_MXC6255=m
 CONFIG_SCA3000=m
+CONFIG_SCA3300=m
 CONFIG_STK8312=m
 CONFIG_STK8BA50=m
 # end of Accelerometers
@@ -8057,6 +8107,7 @@ CONFIG_TI_ADS124S08=m
 CONFIG_TI_ADS131E08=m
 CONFIG_TI_AM335X_ADC=m
 CONFIG_TI_TLC4541=m
+CONFIG_TI_TSC2046=m
 # CONFIG_TWL4030_MADC is not set
 # CONFIG_TWL6030_GPADC is not set
 CONFIG_VF610_ADC=m
@@ -8099,6 +8150,8 @@ CONFIG_SCD30_I2C=m
 CONFIG_SCD30_SERIAL=m
 CONFIG_SENSIRION_SGP30=m
 CONFIG_SPS30=m
+CONFIG_SPS30_I2C=m
+CONFIG_SPS30_SERIAL=m
 CONFIG_VZ89X=m
 # end of Chemical Sensors
 
@@ -8273,6 +8326,9 @@ CONFIG_IIO_ST_LSM6DSX=m
 CONFIG_IIO_ST_LSM6DSX_I2C=m
 CONFIG_IIO_ST_LSM6DSX_SPI=m
 CONFIG_IIO_ST_LSM6DSX_I3C=m
+CONFIG_IIO_ST_LSM9DS0=m
+CONFIG_IIO_ST_LSM9DS0_I2C=m
+CONFIG_IIO_ST_LSM9DS0_SPI=m
 # end of Inertial measurement units
 
 CONFIG_IIO_ADIS_LIB=m
@@ -8323,6 +8379,7 @@ CONFIG_TCS3414=m
 CONFIG_TCS3472=m
 CONFIG_SENSORS_TSL2563=m
 CONFIG_TSL2583=m
+CONFIG_TSL2591=m
 CONFIG_TSL2772=m
 CONFIG_TSL4531=m
 CONFIG_US5182D=m
@@ -8478,6 +8535,7 @@ CONFIG_MLX90614=m
 CONFIG_MLX90632=m
 CONFIG_TMP006=m
 CONFIG_TMP007=m
+CONFIG_TMP117=m
 CONFIG_TSYS01=m
 CONFIG_TSYS02D=m
 CONFIG_MAX31856=m
@@ -8519,8 +8577,6 @@ CONFIG_IPACK_BUS=m
 CONFIG_BOARD_TPCI200=m
 CONFIG_SERIAL_IPOCTAL=m
 CONFIG_RESET_CONTROLLER=y
-# CONFIG_RESET_BRCMSTB_RESCAL is not set
-# CONFIG_RESET_INTEL_GW is not set
 # CONFIG_RESET_TI_SYSCON is not set
 
 #
@@ -8528,6 +8584,7 @@ CONFIG_RESET_CONTROLLER=y
 #
 CONFIG_GENERIC_PHY=y
 CONFIG_GENERIC_PHY_MIPI_DPHY=y
+CONFIG_PHY_CAN_TRANSCEIVER=m
 # CONFIG_BCM_KONA_USB2_PHY is not set
 CONFIG_PHY_CADENCE_TORRENT=m
 CONFIG_PHY_CADENCE_DPHY=m
@@ -8902,11 +8959,6 @@ CONFIG_PSTORE_COMPRESS_DEFAULT="deflate"
 # CONFIG_PSTORE_CONSOLE is not set
 # CONFIG_PSTORE_PMSG is not set
 CONFIG_PSTORE_RAM=m
-CONFIG_PSTORE_ZONE=m
-CONFIG_PSTORE_BLK=m
-CONFIG_PSTORE_BLK_BLKDEV=""
-CONFIG_PSTORE_BLK_KMSG_SIZE=64
-CONFIG_PSTORE_BLK_MAX_REASON=2
 # CONFIG_SYSV_FS is not set
 CONFIG_UFS_FS=m
 # CONFIG_UFS_FS_WRITE is not set
@@ -9468,7 +9520,6 @@ CONFIG_ARCH_STACKWALK=y
 CONFIG_SBITMAP=y
 CONFIG_PARMAN=m
 CONFIG_OBJAGG=m
-# CONFIG_STRING_SELFTEST is not set
 # end of Library routines
 
 CONFIG_PLDMFW=y
@@ -9483,6 +9534,7 @@ CONFIG_ASN1_ENCODER=m
 #
 CONFIG_PRINTK_TIME=y
 # CONFIG_PRINTK_CALLER is not set
+CONFIG_STACKTRACE_BUILD_ID=y
 CONFIG_CONSOLE_LOGLEVEL_DEFAULT=7
 CONFIG_CONSOLE_LOGLEVEL_QUIET=4
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
@@ -9600,6 +9652,7 @@ CONFIG_PRINT_STACK_DEPTH=64
 # CONFIG_PPC_EMULATED_STATS is not set
 CONFIG_JUMP_LABEL_FEATURE_CHECKS=y
 # CONFIG_PPC_IRQ_SOFT_MASK_DEBUG is not set
+# CONFIG_PPC_RFI_SRR_DEBUG is not set
 CONFIG_BOOTX_TEXT=y
 # CONFIG_PPC_EARLY_DEBUG is not set
 # end of powerpc Debugging
