* disable broken altivec in sdl2

--- a/sdl2/PKGBUILD
+++ b/sdl2/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=sdl2
 pkgver=2.0.16
-pkgrel=2
+pkgrel=2.1
 pkgdesc="A library for portable low-level access to a video framebuffer, audio output, mouse, and keyboard (Version 2)"
 arch=(x86_64 powerpc64le powerpc)
 url="https://www.libsdl.org"
@@ -39,7 +39,8 @@ build() {
       -DCLOCK_GETTIME=ON \
       -DJACK_SHARED=ON \
       -DPIPEWIRE=ON \
-      -DPIPEWIRE_SHARED=ON
+      -DPIPEWIRE_SHARED=ON \
+      -DALTIVEC=OFF
   ninja -C build
 }
 
