--- a/ladspa/PKGBUILD
+++ b/ladspa/PKGBUILD
@@ -1,18 +1,23 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: damir <damir@archlinux.org>
-# Contributor: David Runge <dave@sleepmap.de>
+# Maintainer: David Runge <dvzrv@archlinux.org>
+# Contributor: damir <damir@archlinux.org>
+
 pkgname=ladspa
-pkgver=1.15
-pkgrel=2
+pkgver=1.17
+pkgrel=1
 pkgdesc="Linux Audio Developer's Simple Plugin API (LADSPA)"
-arch=( x86_64 powerpc64le powerpc )
-license=('LGPL')
+arch=(x86_64 powerpc64le powerpc)
+license=('LGPL2.1')
 url="https://www.ladspa.org/"
-depends=('gcc-libs')
+depends=('gcc-libs' 'glibc')
+makedepends=('libsndfile')
+optdepends=('libsndfile: for applyplugin')
 source=("https://ladspa.org/download/ladspa_sdk_${pkgver}.tgz"
         'fix-memleak-in-plugin-scanning.patch')
-sha512sums=('a521622e23d988284244003e4ccfc3b42f6ddc7944cb00e7949b87e09d7f39a0cbb64b6d8b5a5af0a5ccf7179f88815416a88f02d3912957167e54b74accfc65'
+sha512sums=('37f94aa52b5a2f8709528989dea289eb01342f3bcb9e85d0f4829ddd9d90b2934a113db11100f09375a50f6612122b78156fec916f2c78a22406253d5cb394c7'
             'e80a575e6afe42f9d0ac1234a7832a29fb9362c7ab7b2d6b14cc3e6da6a9ba67af886cf09f1c0b78c161205084f705049fb4dc22fe2795efaeb7d94da90dc93e')
+b2sums=('cfb80e8ced314d5cc62fcb7f0b82e58f572503f2a732b2bb8a58343e8f69e417c0b0a2919bbb40629567fb331bf60a7f0c6f186db47e5b2651725b039526cdbb'
+        'b2235b41d9638cceb93a41452f1f0b710bc3f9264fe735972099244dfc8d98d354c7d15084d79b0bdfc4fa3f437f9368f81aa0ebdb7e39df5900fbbf172927c2')
 
 prepare() {
   mv -v ${pkgname}_sdk_${pkgver} ${pkgname}-${pkgver}
