* update jemalloc to 1:5.2.1-5

--- a/jemalloc/PKGBUILD
+++ b/jemalloc/PKGBUILD
@@ -6,12 +6,13 @@
 pkgname=jemalloc
 epoch=1
 pkgver=5.2.1
-pkgrel=4
+pkgrel=5
 pkgdesc='General-purpose scalable concurrent malloc implementation'
 arch=(x86_64 powerpc64le powerpc)
 license=('BSD')
 url='http://www.canonware.com/jemalloc/'
 depends=('glibc')
+makedepends=('clang')
 provides=('libjemalloc.so')
 optdepends=('perl: for jeprof')
 source=("https://github.com/jemalloc/jemalloc/releases/download/${pkgver}/${pkgname}-${pkgver}.tar.bz2")
@@ -22,6 +23,10 @@ build() {
   # configure sets -O3 so remove our -O?
   CFLAGS="${CFLAGS/-O?/}"
   CXXFLAGS="${CXXFLAGS/-O?/}"
+
+  # FS#71745: GCC-built jemalloc causes telegram-desktop to crash a lot. The reason is still not clear.
+  export CC=clang
+  export CXX=clang++
 
   # jemalloc supports a runtime page size that's smaller or equal to the build
   # time one, but aborts on a larger one. If not defined, it falls back to the
