* update libnotify to 0.7.9-2

--- a/libnotify/PKGBUILD
+++ b/libnotify/PKGBUILD
@@ -1,18 +1,18 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Jan de Groot <jgc@archlinux.org>
+# Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
+# Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libnotify
 pkgver=0.7.9
-pkgrel=1
+pkgrel=2
 pkgdesc="Library for sending desktop notifications"
-arch=( x86_64 powerpc64le powerpc )
-url="https://developer.gnome.org/notification-spec/"
+arch=(x86_64 powerpc64le powerpc)
+url="https://gitlab.gnome.org/GNOME/libnotify"
 license=(LGPL)
 depends=(gdk-pixbuf2)
 makedepends=(gtk3 gobject-introspection git meson docbook-xsl xmlto gtk-doc)
-provides=(libnotify.so)
 _commit=98a4bf483a69c6436311bcb9834d9d93235c96b7  # tags/0.7.9^0
-source=("git+https://gitlab.gnome.org/GNOME/libnotify.git#commit=$_commit")
+source=("git+$url.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
@@ -26,7 +26,7 @@ prepare() {
 
 build() {
   arch-meson $pkgname build
-  ninja -C build
+  meson compile -C build
 }
 
 check() {
@@ -34,5 +34,8 @@ check() {
 }
 
 package() {
-  DESTDIR="$pkgdir" meson install -C build
+  depends+=(libg{lib,object,io}-2.0.so libgdk_pixbuf-2.0.so)
+  provides+=(libnotify.so)
+
+  meson install -C build --destdir "$pkgdir"
 }
