* update chromium to 93.0.4577.82-2

--- a/chromium/PKGBUILD
+++ b/chromium/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=chromium
 pkgver=93.0.4577.82
-pkgrel=1
+pkgrel=2
 _launcher_ver=8
 _gcc_patchset=6
 pkgdesc="A web browser built for speed, simplicity, and security"
@@ -31,6 +31,9 @@ source=(https://commondatastorage.googleapis.com/chromium-browser-official/$pkgn
         sql-make-VirtualCursor-standard-layout-type.patch
         chromium-93-ffmpeg-4.4.patch
         use-oauth2-client-switches-as-default.patch
+        chromium-harfbuzz-3.0.0.patch
+        skia-harfbuzz-3.0.0.patch
+        0013-chromium-breakpad-fix-build-with-glibc-2.34.patch
         xxx-ppc64le-libvpx.patch
         xxx-ppc64le-sandbox-linux-stat.patch
         xxx-ppc64le-support.patch
@@ -58,6 +61,9 @@ sha256sums=('5d66214858fcba11a8f733d7a6fab61ed10e13e7df4ed37e63b66a0370fb2853'
             'dd317f85e5abfdcfc89c6f23f4c8edbcdebdd5e083dcec770e5da49ee647d150'
             '1a9e074f417f8ffd78bcd6874d8e2e74a239905bf662f76a7755fa40dc476b57'
             'e393174d7695d0bafed69e868c5fbfecf07aa6969f3b64596d0bae8b067e1711'
+            '7ce947944a139e66774dfc7249bf7c3069f07f83a0f1b2c1a1b14287a7e15928'
+            'dae11dec5088eb1b14045d8c9862801a342609c15701d7c371e1caccf46e1ffd'
+            'd1ad185e25a62d50bbed0dbf131e52bead8a52ccc63a53642b3a4f62056a5458'
             '6b7ad5cd5d7d61b5441810688fc5bd99cb8198291b2252451d352a620a2e09bb'
             '16361d737c14135e464bf52e09d0b79c0e9ef84c364253e08f435e8e72d7b5c9'
             '043e007bcbd1d324b81cb1f82971bbd006edba3f4e144552c389e17d8f7a1979'
@@ -128,6 +134,13 @@ prepare() {
   # setting GOOGLE_DEFAULT_CLIENT_ID and GOOGLE_DEFAULT_CLIENT_SECRET at
   # runtime -- this allows signing into Chromium without baked-in values
   patch -Np1 -i ../use-oauth2-client-switches-as-default.patch
+
+  # Fix build with glibc 2.34
+  patch -Np2 -i ../0013-chromium-breakpad-fix-build-with-glibc-2.34.patch
+
+  # Fix build with harfbuzz 3.0.0
+  patch -Np1 -i ../chromium-harfbuzz-3.0.0.patch
+  patch -Np1 -d third_party/skia -i ${srcdir}/skia-harfbuzz-3.0.0.patch
 
   # Fix build with older ffmpeg
   patch -Np1 -i ../chromium-93-ffmpeg-4.4.patch
