* update gst-plugins-ugly to 1.18.5-1

--- a/gst-plugins-ugly/PKGBUILD
+++ b/gst-plugins-ugly/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gst-plugins-ugly
-pkgver=1.18.4
-pkgrel=2
+pkgver=1.18.5
+pkgrel=1
 pkgdesc="Multimedia graph framework - ugly plugins"
 url="https://gstreamer.freedesktop.org/"
 arch=(x86_64 powerpc64le powerpc)
@@ -12,7 +12,7 @@ license=(LGPL)
 depends=(gst-plugins-base-libs libdvdread libmpeg2 a52dec libsidplay libcdio
          x264 opencore-amr)
 makedepends=(python git meson)
-_commit=bb3f9de20025820fb1c913f96e31cf0a27528bcc  # tags/1.18.4^0
+_commit=bd1dfb44475ab04d42b217acdf90942e0b7893b5  # tags/1.18.5^0
 source=("git+https://gitlab.freedesktop.org/gstreamer/gst-plugins-ugly.git#commit=$_commit")
 sha256sums=('SKIP')
 
@@ -29,8 +29,8 @@ build() {
   arch-meson $pkgname build \
     -D doc=disabled \
     -D gobject-cast-checks=disabled \
-    -D package-name="GStreamer Ugly Plugins (Arch Linux)" \
-    -D package-origin="https://www.archlinux.org/"
+    -D package-name="GStreamer Ugly Plugins (Arch POWER)" \
+    -D package-origin="https://www.archlinuxpower.org/"
   meson compile -C build
 }
 
@@ -39,5 +39,5 @@ check() {
 }
 
 package() {
-  DESTDIR="$pkgdir" meson install -C build
+  meson install -C build --destdir "$pkgdir"
 }
