* update icu to 69.1-1.1

--- a/icu/PKGBUILD
+++ b/icu/PKGBUILD
@@ -4,10 +4,10 @@
 
 pkgname=icu
 pkgver=69.1
-pkgrel=1
+pkgrel=1.1
 pkgdesc="International Components for Unicode library"
 arch=(x86_64 powerpc64le powerpc)
-url="http://site.icu-project.org/home"
+url="https://icu.unicode.org"
 license=('custom:icu')
 depends=('gcc-libs' 'sh')
 makedepends=('python')
@@ -25,6 +25,7 @@ validpgpkeys+=('0E51E7F06EF719FBD072782A5F56E5AFA63CCD33') #"Craig Cornelius (Fo
 
 build() {
   cd icu/source
+  CC=gcc CXX=g++ \
   ./configure --prefix=/usr \
 	--sysconfdir=/etc \
 	--mandir=/usr/share/man \
