--- a/thunderbird/distribution.ini
+++ b/thunderbird/distribution.ini
@@ -1,8 +1,8 @@
 [Global]
-id=archpower
+id=archlinux
 version=1.0
-about=Mozilla Thunderbird for Arch POWER
+about=Mozilla Thunderbird for Arch Linux
 
 [Preferences]
-app.distributor=archpower
+app.distributor=archlinux
 app.distributor.channel=thunderbird
