--- a/kde/knewstuff/PKGBUILD
+++ b/kde/knewstuff/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=knewstuff
-pkgver=5.85.0
-pkgrel=1
+pkgver=5.86.0
+pkgrel=2
 pkgdesc='Support for downloading application assets from the network'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
@@ -14,10 +14,16 @@ depends=(kio kpackage attica syndication)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc qt5-declarative)
 optdepends=('kirigami2: QML components')
 groups=(kf5)
-source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('f0c68fd75eb18d8c70ca27031b273774fe33c38c72fdf86254cfe3c09df620c9'
-            'SKIP')
+source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig}
+        https://invent.kde.org/frameworks/knewstuff/-/commit/d09ba191.patch)
+sha256sums=('26f8b88add9050201e7871349adb3996d75d1ab047aa1a24279743e1425b75b0'
+            'SKIP'
+            '23541c4a71f4d17d530fac13cb01b67d3783380bbebfa5e5decf62383ef0b44d')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+
+prepare() {
+  patch -d $pkgname-$pkgver -p1 < d09ba191.patch # Fix crashes
+}
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
