* update binutils to 2.37-1.1

--- a/binutils/PKGBUILD
+++ b/binutils/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=binutils
 pkgver=2.37
-pkgrel=1
+pkgrel=1.1
 pkgdesc='A set of programs to assemble and manipulate binary and object files'
 arch=(x86_64 powerpc64le powerpc)
 url='https://www.gnu.org/software/binutils/'
@@ -19,9 +19,11 @@ replaces=(binutils-multilib)
 options=(staticlibs !distcc !ccache)
 #_commit=cb5f6a3e146cc70bc2d864989386df80acec5d3e
 #source=(git+https://sourceware.org/git/binutils-gdb.git#commit=$_commit)
-source=(https://ftp.gnu.org/gnu/binutils/binutils-$pkgver.tar.xz{,.sig})
+source=(https://ftp.gnu.org/gnu/binutils/binutils-$pkgver.tar.xz{,.sig}
+	0001-bfd-Close-the-file-descriptor-if-there-is-no-archive.patch)
 sha256sums=('820d9724f020a3e69cb337893a0b63c2db161dadcb0e06fc11dc29eb1e84a32c'
-            'SKIP')
+            'SKIP'
+            '7ebb017ccd00bb3806625a42b6fc6c7332f00a562bc5b12e5b1484993640b27a')
 validpgpkeys=(3A24BC1E8FB409FA9F14371813FCEF89DD9E3C4F)
 
 prepare() {
@@ -29,6 +31,8 @@ prepare() {
   mkdir -p binutils-build
 
   cd binutils-gdb
+
+  patch -Np1 -i ${srcdir}/0001-bfd-Close-the-file-descriptor-if-there-is-no-archive.patch
 
   # Turn off development mode (-Werror, gas run-time checks, date in sonames)
   sed -i '/^development=/s/true/false/' bfd/development.sh
