* update chromium to 94.0.4606.71-1.1

--- a/chromium/PKGBUILD
+++ b/chromium/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=chromium
 pkgver=94.0.4606.71
-pkgrel=1
+pkgrel=1.1
 _launcher_ver=8
 _gcc_patchset=3
 pkgdesc="A web browser built for speed, simplicity, and security"
@@ -146,7 +146,7 @@ prepare() {
   patch -Np1 -i ../patches/chromium-90-ruy-include.patch
   patch -Np1 -i ../patches/chromium-94-CustomSpaces-include.patch
 
-  patch -Np1 -i ${srcdir}/chromium-breakpad-fix-build-with-glibc-2.34.patch
+  patch -Np2 -i ${srcdir}/chromium-breakpad-fix-build-with-glibc-2.34.patch
 
   # thanks Voidlinux!
   patch -Np1 -i ${srcdir}/xxx-ppc64le-support.patch
@@ -201,6 +201,8 @@ build() {
   export CXX=clang++
   export AR=ar
   export NM=nm
+  export CXXFLAGS=${CFLAGS/-O?/-O2}
+  export CFLAGS=${CFLAGS/-O?/-O2}
 
   local _flags=(
     'custom_toolchain="//build/toolchain/linux/unbundle:default"'
